# pyrengine

./: .gitignore  CHANGES.md  DEVELOPMENT.md  INSTALL.md  LICENSE  Makefile  README.md  babel.cfg  pyproject.toml  pyrengine.sublime-project
app/: __init__.py  backups.py  jinja_helpers.py  notifications.py
app/admin/: __init__.py  routes.py
app/blog/: __init__.py  routes.py
app/main/: __init__.py  routes.py
app/models/: __init__.py  article.py  config.py  file.py  user.py
app/static/js/: pyrengine-admin.js  pyrengine.js  tr-en.js  tr-ru.js
app/static/styles/blog.regolit.com/: blog.css
app/static/styles/default/: blog.css
app/templates/: base.html  base.jinja2  js_translations.html
app/templates/account/: login.html  login.jinja2
app/templates/admin/: backups_list.jinja2  base.jinja2  edit_file_props.jinja2  settings_pages_widget.jinja2
app/templates/blog/: article_comment.jinja2  article_snippet.jinja2  comments_moderation.jinja2  edit_article.html  edit_article.jinja2  index.html  index.jinja2  markup-help.html  view_article.jinja2
app/templates/email/: comment_response.jinja2
app/templates/macros/: forms.jinja2
app/templates/posts/: index.html
app/templates/widgets/: actions.html  actions.jinja2
app/translations/en/LC_MESSAGES/: messages.po
app/translations/ru/LC_MESSAGES/: messages.po
app/utils/: __init__.py  markup.py
examples/: development.cfg
pyrengine/: __init__.py  backups.py  files.py  jinja_helpers.py  notifications.py  wsgi.py
pyrengine/admin/: __init__.py  routes.py
pyrengine/blog/: __init__.py  routes.py
pyrengine/examples/: development.cfg  production.cfg  pyrengine-nginx-uwsgi.conf  pyrengine-uwsgi.ini
pyrengine/models/: __init__.py  article.py  config.py  file.py  user.py
pyrengine/models/migrations/versions/: 525c1f82801f_initial_migration.py
pyrengine/static/js/: pyrengine-admin.js  pyrengine.js  tr-en.js  tr-ru.js
pyrengine/static/styles/default/: blog.css
pyrengine/templates/: base.jinja2  generic_error.jinja2
pyrengine/templates/account/: change_password.jinja2  change_password_complete.jinja2  verify_email.jinja2  verify_email_complete.jinja2
pyrengine/templates/admin/: backups_list.jinja2  edit_file_props.jinja2  emails_list.jinja2  files_list.jinja2  settings.jinja2  settings_pages_widget.jinja2
pyrengine/templates/blog/: article_comment.jinja2  article_snippet.jinja2  comments_moderation.jinja2  edit_article.jinja2  index.jinja2  markup_help.jinja2  view_article.jinja2
pyrengine/templates/email/: admin_new_comment.jinja2  email_verification.jinja2
pyrengine/templates/macros/: forms.jinja2
pyrengine/templates/widgets/: actions.jinja2  pages.jinja2  search.jinja2  tags_cloud.jinja2
pyrengine/translations/en/LC_MESSAGES/: messages.po
pyrengine/translations/ru/LC_MESSAGES/: messages.po
pyrengine/utils/: __init__.py  __main__.py  markup.py  md_subscript.py
translations/en/LC_MESSAGES/: messages.po
translations/ru/LC_MESSAGES/: messages.po
