[project]
dynamic = ["version"]
name = "pyrengine"
#version = "1.0.0"
description = "Personal blog engine written in Python using Flask and SqlAlchemy"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name="Sergey Stolyarov", email="sergei@regolit.com" },
]
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "Flask==3.0.2",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.0.7",
    "Flask-Babel==4.0.0",
    "Flask-Login==0.6.3",
    "pytz",
    "markdown==3.4.4",
    "Pygments==2.17.2",
    "humanize==4.9.0",
    "lxml==5.1.1",
    "psycopg2==2.9.9",
    "pillow==10.2.0",
# pinned auto deps
    "Jinja2==3.1.3",
    "click==8.1.7",
    "blinker==1.7.0",
    "Babel==2.14.0",
    "alembic==1.13.1",
    "sqlalchemy==2.0.29",
    "Mako==1.3.2",
    "typing-extensions==4.10.0",
    "MarkupSafe==2.1.5",
    "greenlet==3.0.3"
]

#[tool.setuptools]
#package-dir = {"" = "pyrengine"}

#[tool.setuptools.packages]
#find = {}  # Scanning implicit namespaces is active by default

[tool.setuptools.dynamic]
version = {attr = "pyrengine.__version__"}

[tool.setuptools.packages.find]
exclude = ["__pycache__"]

[tool.setuptools.package-data]
# add templates recursiveley
"pyrengine.templates" = ["**/*.jinja2"]
# add everything in "pyrengine/static" directory
"pyrengine.static" = ["**/*"]
"pyrengine.examples" = ["**/*"]
"pyrengine.translations" = ["**/*"]
"pyrengine.models.migrations" = ["**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc"]


[build-system]
requires = ["setuptools >= 62.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/sigsergv/pyrengine"
