[project]
dynamic = ["version"]
name = "pyrengine"
#version = "1.0.0"
description = "Personal blog engine written in Python using Flask and SqlAlchemy"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name="Sergey Stolyarov", email="sergei@regolit.com" },
]
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "Flask==3.1.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.0.7",
    "Flask-Babel==4.0.0",
    "Flask-Login==0.6.3",
    "pytz",
    "markdown==3.7",
    "Pygments==2.18.0",
    "humanize==4.11.0",
    "lxml==5.3.0",
    "psycopg2==2.9.10",
    "pillow==11.0.0",
# pinned auto deps
    "Jinja2==3.1.4",
    "click==8.1.7",
    "blinker==1.9.0",
    "Babel==2.16.0",
    "alembic==1.14.0",
    "sqlalchemy==2.0.36",
    "Mako==1.3.6",
    "typing-extensions==4.12.2",
    "MarkupSafe==3.0.2",
    "greenlet==3.1.1"
]

#[tool.setuptools]
#package-dir = {"" = "pyrengine"}

#[tool.setuptools.packages]
#find = {}  # Scanning implicit namespaces is active by default

[tool.setuptools.dynamic]
version = {attr = "pyrengine.__version__"}

[tool.setuptools.packages.find]
exclude = ["__pycache__"]

[tool.setuptools.package-data]
# add templates recursiveley
"pyrengine.templates" = ["**/*.jinja2"]
# add everything in "pyrengine/static" directory
"pyrengine.static" = ["**/*"]
"pyrengine.examples" = ["**/*"]
"pyrengine.translations" = ["**/*"]
"pyrengine.models.migrations" = ["**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc"]


[build-system]
requires = ["setuptools >= 62.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/sigsergv/pyrengine"
